<resources>
    <string name="app_name">Agribuddy Staff</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_check_in">Selfie Check-In</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_payslips">Payslips</string>
    <string name="menu_leave_management">Leave Management</string>
    <string name="menu_logout">Logout</string>
    <string name="dialog_bt_no">No</string>
    <string name="dialog_bt_yes">Yes</string>

    <string name="message_access_location_denied">Oops! You denied application access GPS, can not use this function</string>
    <string name="message_access_camera_or_storage_or_gps_denied">Oops! You denied application access camera, storage or GPS, You can not use this function</string>
    <string name="message_access_camera_or_storage_denied">Oops! You denied application access camera or storage, You can not use this function</string>

    <string name="dialog_message_error">Error occurred. Please try again.</string>
    <string name="dialog_message_disconnect">Can\'t connect to internet. Please try again.</string>
    <string name="dialog_message_empty_field">Please enter every field</string>
    <string name="message_dont_have_access_permission">You don\'t have permission to access this feature</string>

</resources>
